# owll-old

./: .env  CHANGELOG.md  README.md  main.py  prefix.json  pyproject.toml
cogs/: eval.py  fun.py  idk.py  memes.py
